--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,20 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Rudéns gård</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../CSS/stylesheet.css">
 </head>
 <body>
+<div class="backgroundImg">
 <div id="welArea">
-    <h1 id="mainTitle"><strong>Rudéns gård</strong> i Backe, Fjällsjö församling, Strömsund kommun</h1>
+    <h1 id="mainTitle"><span id="titleBack">Rudéns gård i Backe, Fjällsjö församling, Strömsund kommun</span></h1>
+</div>
 </div>
 
 <ul id="navigationMenu">
-    <li><a href="xxx">Gårdens historia</a></li>
+    <li id="active"><a href="xxx">Gårdens historia</a></li>
     <li><a href="xxx">Gården</a></li>
     <li><a href="xxx">Skogen</a></li>
     <li><a href="xxx">Kartor</a></li>
     <li><a href="xxx">Kontaktuppgifter</a></li>
     <li><a href="xxx">Kalender</a></li>
 </ul>
+
+<i class="glyphicon glyphicon-chevron-down"></i>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at dapibus mi. Vivamus molestie, urna in pulvinar cursus, mauris erat faucibus magna, quis iaculis nulla elit quis tortor. Nulla non congue nibh, quis consectetur mauris. Aenean ut nulla vel turpis pellentesque semper. In ac magna ut tellus posuere fermentum tempus in ipsum. Donec venenatis est eget est congue auctor. Phasellus tortor eros, blandit sed sem sit amet, aliquam maximus erat. Sed posuere dignissim viverra. Pellentesque scelerisque mollis placerat. Maecenas pretium leo leo, quis vestibulum tellus dictum quis. Vivamus nec tortor eu ante pellentesque maximus in et justo. Proin sollicitudin ac ipsum ultrices consequat. Nulla facilisi.<br/>
+
+    Sed efficitur, libero quis dictum rutrum, neque leo euismod massa, lacinia luctus sem mauris sed dolor. In nec tellus eros. Sed iaculis porta eleifend. Praesent eleifend ante eget risus commodo, tincidunt pulvinar dui molestie. In iaculis aliquam ex ut vulputate. Maecenas elementum mi eu augue tempus blandit. Praesent commodo neque vitae augue ullamcorper, pharetra porttitor enim tincidunt. Pellentesque mollis mi vitae dictum finibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec ac arcu ipsum.<br/>
+
+    Sed lorem ipsum, tristique vel gravida non, faucibus at purus. Aliquam erat volutpat. In scelerisque nibh non viverra mollis. Sed sagittis augue dapibus, mattis ante ac, ultrices nunc. Donec vitae elit vel enim scelerisque fringilla. Donec mollis tempus ultricies. Integer porttitor tincidunt nulla vitae auctor. Cras cursus vitae nunc eu tempor. Proin quam massa, hendrerit a enim ut, finibus accumsan quam. Etiam sed lacinia erat. Mauris commodo condimentum metus non fermentum.<br/>
+
+    Nunc eget sem eget nisi semper finibus. Nunc et tellus faucibus, rutrum magna id, dapibus urna. Nulla gravida mi sem, a gravida massa dictum et. Fusce dapibus risus nunc, eget dignissim mauris scelerisque sit amet. Pellentesque eleifend augue vel neque tempor consequat. Aliquam semper aliquam lectus, eget molestie purus vehicula et. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce accumsan tellus sed ultricies accumsan. Vestibulum pulvinar ligula in mauris hendrerit, et malesuada libero feugiat. <br/>
+
+    Nullam augue metus, porta ut odio ac, gravida auctor lectus. Aenean lacinia, velit et semper sollicitudin, orci felis pellentesque libero, eget consequat lorem mi non urna. Nunc congue massa auctor, ornare turpis eget, fringilla lorem. Aenean eu egestas tortor, vel suscipit enim. Maecenas porttitor quam quis purus consequat elementum. Cras et sem fringilla, sollicitudin lectus eget, euismod tellus. Aliquam porta at ipsum a finibus. Sed dolor augue, imperdiet id lacinia quis, mollis id nisi. Etiam tempus mi nec nisi tincidunt laoreet. Nulla mattis quis massa fringilla lacinia. In vitae mauris ac quam mattis euismod. Nunc lacus odio, tincidunt tempus orci non, malesuada rutrum massa. Quisque tempus, nunc at pulvinar sodales, lacus nunc cursus nisl, id sollicitudin metus lorem at tortor.</p>
 </body>
 </html>
